# EchoMusic-Lyrics-WinIsland

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  tauri.conf.json  接口文档.md
.agents/build-winisland/: SKILL.md
.agents/commit-winisland/: SKILL.md
.ai/: ARCHITECTURE.md  STYLE-GUIDE.md
.github/: pull_request_template.md
.github/workflows/: pr-build.yml  pr-check.yml  publish-crates.yml  rust.yml
Page/: download.md  plugin-dev.md
Page/zh/: download.md  plugin-dev.md
crates/winisland-plugin-api/src/: lib.rs
crates/winisland-plugin-api/src/packager/: manifest.rs  mod.rs
resources/: icon.psd
resources/in_app/lang/: en.lang  zh.lang
settings-ui/: index.html  package.json  tsconfig.json
settings-ui/src/: main.ts  styles.css
src/: main.rs
src/core/: audio.rs  config.rs  i18n.rs  lyrics.rs  lyrics_ws.rs  media_info.rs  mod.rs  persistence.rs  render.rs  smtc.rs  ws_media.rs
src/icons/: controls.rs
src/plugin/: loader.rs  zip_loader.rs
src/ui/expanded/: music_view.rs  widget_view.rs
src/utils/: autostart.rs  backdrop.rs  color.rs  font.rs  glass.rs  liquid_glass.rs  liquid_glass_windows.rs  mod.rs  mouse.rs  mouse_windows.rs  process.rs  updater.rs  updater_windows.rs  win32.rs
src/utils/settings_ui/: input.rs  items.rs  renderer.rs
src/window/: app.rs  settings.rs  tray.rs
src/window/settings/: input.rs  mod.rs
