[package]
name = "EchoMusic-Lyrics-WinIsland"
version = "1.1.5"
edition = "2024"

[dependencies]
cpal = "0.15"
realfft = "3.3"
bytemuck = "1.25.0"
skia-safe = "0.93.1"
softbuffer = "0.4.8"
tray-icon = "0.19"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_Security", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Variant", "Win32_Globalization", "Win32_UI_Shell", "UI_Notifications", "Data_Xml_Dom"] }
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
open = "5.3"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.149"
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util", "macros"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
tokio-util = "0.7"
rfd = "0.17.2"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
